--- a/career.html
+++ b/career.html
@@ -32,26 +32,26 @@
             <div class="nav-menu">
               <ul class="d-flex al-center">
                 <li id="nav-home">
-                  <a href="index1.html" class="active">Home</a>
+                  <a href="index.html" class="active">Home</a>
                 </li>
                 <li id="nav-about">
-                  <a href="about1.html">About Us</a>
+                  <a href="about.html">About Us</a>
                 </li>
                 <li id="nav-service">
                   <a href="#">Service</a>
                 </li>
-                <li id="nav-career"><a href="career1.html">Career</a></li>
+                <li id="nav-career"><a href="career.html">Career</a></li>
                 <li><a href="#" id="nav-contact">Contact Us</a></li>
               </ul>
             </div>
             <div class="contact-btn">
-              <a href="contact1.html" target="_blank">Get in touch</a>
+              <a href="contact.html" target="_blank">Get in touch</a>
             </div>
           </div>
         </div>
       </nav>
     </header>
-    
+
     <!-- home section -->
     <section class="home-menu-service-setion" id="home-menu-service-setion">
       <div class="home-menu-service-container">
